unpackaged/main/default/objects/PR_Attachment__c/PR_Attachment__c.object-meta.xml
<CustomObject>
    <description>This object will keep track of attachment status of API send request to SAP. It relates to PR Header object.</description>
    <label>PR Attachment</label>
    <nameField>
        <label>PR_Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PR Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>