unpackaged/main/default/objects/PR_Attachment__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <formula>HYPERLINK("/servlet/servlet.FileDownload?file="&amp; Attachment_Id__c, 'View File')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment</label>
    <type>Text</type>
</CustomField>